--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-javascript",
   "version": "1.0.0",
   "type": "module",
-  "description": "React TypeScript on Replit, using Vite bundler",
+  "description": "ReactJS on Replit, using Vite bundler",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -16,12 +16,15 @@
     "react-router-dom": "^6.10.0"
   },
   "devDependencies": {
-    "@types/react": "^18.0.27",
-    "@types/react-dom": "^18.0.10",
-    "@vitejs/plugin-react": "^3.1.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "typescript": "^4.9.5",
-    "vite": "^4.1.1"
+    "@types/react": "^18.0.7",
+    "@types/react-dom": "^18.0.6",
+    "@vitejs/plugin-legacy": "^1.8.1",
+    "@vitejs/plugin-react": "^1.3.1",
+    "@vitejs/plugin-react-refresh": "^1.3.6",
+    "bootstrap": "^5.2.0",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "react-router-dom": "^6.3.0",
+    "vite": "^2.9.5"
   }
 }
